Sat Apr  9 17:00:37 2005  Arvind S. Krishna  <arvindk@doc.dre.vanderbilt.edu>

	* tests/Memcpy_Test.cpp:

	  Added a test to test the speed of memcpy () for data sizes less
	  than 16 bytes. This test checks to see if loop unrolling is
	  faster than memcpy for these data sizes.

	* tests/run_test.lst:
	* tests/tests.mpc:

	  Updated the run list file to run this test and created a
	  corresponding entry to build this test.

Sat Apr  9 10:04:37 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Thread_Hook.h (~ACE_Thread_Hook):

	  Fixed "undefined reference" link-time error.

Fri Apr  8 23:24:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/RB_Tree.cpp (remove_i):

	  Fixed "control reaches end of non-void function" warning.

Fri Apr  8 22:42:55 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Capabilities.cpp (getval, resetcaps):
	* ace/Thread_Manager.cpp (ACE_EXECUTE_OP):

	  Initialize variables.  Addresses "variables may be used
	  unitialized" g++ 4.0 (CVS snapshot) warnings.

	* ace/Connector.h (~ACE_Connector_Base):
	* ace/Reactor_Timer_Interface.h (~ACE_Reactor_Timer_Interface):
	* ace/Thread_Hook.h (~ACE_Thread_Hook):

	  Added virtual destructors.  Fixes "contains virtual functions
	  but non-virtual destructor" g++ 4.0 (CVS snapshot) warnings.

Fri Apr  8 22:28:56 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* include/makeinclude/platform_g++_common.GNU (templates):

	  Set templates variable to "automatic" if using g++ 4.x.  Thanks
	  to John Michael Zorko for pointing out the problem.

Fri Apr  8 16:39:00 2005  Gary Maxey <gary.maxey@hp.com>

	* ace/Stats.cpp

	  In dump_throughput() handle cast to double when
	  ACE_LACKS_UNSIGNEDLONGLONG_T.

	* tests/High_Res_Timer_Test.cpp

          Use ACE_HRTIME_CONVERSION instead of ACE_U64_TO_U32 for
          platform independence.


Fri Apr  8 12:15:00 2005  Gary Maxey <gary.maxey@hp.com>

        * ace/Basic_Types.h
